# anomaly-detection

./: pyproject.toml  requirements.txt
anomalydetector/: data.py  models.py  plotting.py  processing.py
anomalydetector/models/: NICE.py  VAE.py  utils.py
notebooks/: NFVAE-example.ipynb  NICE-example.ipynb  NICE-src-detector.ipynb  NICE.ipynb
